--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>一首璐宝的无题小诗</h1>
+<h1>写给璐宝的无题小诗</h1>
 <p>太阳升起有气无力</p>
 <p>折叠身体，叹一口气</p>
 <p>推开房门，一夜的梦刑满释放</p>
