--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>小诗一首</title>
 </head>
 <body>
 <h1>写给璐宝的无题小诗</h1>
